--- a/build.gradle
+++ b/build.gradle
@@ -1,34 +1,59 @@
-group 'com.prestongarno'
-version '1.0-SNAPSHOT'
+buildscript {
+  ext.sourceCompatibility = 1.8
+  ext.kotlin_version = '1.1.4-3'
+  ext.clientId = 'ktq-gradle'
+  ext.projectDescription = 'a kotlin client for graphql'
+  ext.gitBaseUrl = GIT_BASE_URL + '/ktq'
+  ext.projLicenseUrl = "$gitBaseUrl/LICENSE.txt"
+  ext.localStaging = "$buildDir/publish/staging/"
+  ext.localBintrayStaging = "$buildDir/bintray/"
+
+  repositories {
+    jcenter()
+    mavenCentral()
+  }
+
+  dependencies {
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+  }
+}
 
 apply plugin: 'java'
+apply plugin: 'idea'
 apply plugin: 'kotlin'
 
-sourceCompatibility = 1.8
+version = 0.1
+group = 'com.prestongarno.ktq'
 
 repositories {
-  mavenCentral()
+  maven {
+    url 'https://dl.bintray.com/prestongarno/ktq'
+    mavenCentral()
+  }
 }
-
+compileKotlin {
+  kotlinOptions {
+    jvmTarget = "1.8"
+  }
+}
+compileTestKotlin {
+  kotlinOptions {
+    jvmTarget = "1.8"
+  }
+}
 dependencies {
+  compile "org.jetbrains.kotlin:kotlin-reflect"
+  testCompile 'junit:junit:4.12'
+  testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
+  compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
   testCompile group: 'junit', name: 'junit', version: '4.12'
   compile 'com.squareup:kotlinpoet:0.4.0'
-  compile 'com.prestongarno.ktq:client:0.1'
-  compile gradleApi()
-}
-
-jar {
-  manifest {
-    attributes(
-      'Manifest-Version': '1.0'
-      'implementation-class': 'com.prestongarno.ktq.Plugin'
-    )
-  }
+  compile 'com.prestongarno.ktq:ktq-client:0.1'
 }
 
 task integrationTest(type: Test) {
   options {
-    systemProperties System.getProperties() as Map<String, ?>
+    systemProperties System.getProperties() 
     //noinspection GroovyAssignabilityCheck
     systemProperties.put("-Dcom.prestongarno.ktq.compiler.writeTestFiles", "true")
   }
