--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,3 @@
-buildscript {
-  ext.sourceCompatibility = 1.8
-  ext.kotlin_version = '1.1.4-3'
-  ext.clientId = 'ktq-gradle'
-  ext.projectDescription = 'a kotlin client for graphql'
-  ext.gitBaseUrl = GIT_BASE_URL + '/ktq-gradle'
-  ext.projLicenseUrl = "$gitBaseUrl/LICENSE.txt"
-  ext.localStaging = "$buildDir/publish/staging/"
-  ext.localBintrayStaging = "$buildDir/bintray/"
-
-  repositories {
-    jcenter()
-    mavenCentral()
-  }
-
-  dependencies {
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-  }
-}
-
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'kotlin'
@@ -25,11 +5,26 @@ apply plugin: 'kotlin'
 version = 0.1
 group = 'com.prestongarno.ktq'
 
-repositories {
-  maven {
-    url 'https://dl.bintray.com/prestongarno/ktq'
-    mavenCentral()
+buildscript {
+  ext.sourceCompatibility = 1.8
+  ext.kotlin_version = '1.1.4-3'
+  ext.clientId = 'ktq-gradle'
+  ext.projectDescription = 'compiles graphql schemas to kotlin type hierarchies'
+  ext.gitBaseUrl = GIT_BASE_URL + '/ktq-gradle'
+  ext.projLicenseUrl = "$gitBaseUrl/LICENSE.txt"
+  ext.localStaging = "$buildDir/staging/"
+  ext.localBintrayStaging = "$buildDir/bintray/"
+
+  repositories {
+      mavenCentral()
   }
+  dependencies {
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+  }
+}
+
+repositories {
+    mavenCentral()
 }
 compileKotlin {
   kotlinOptions {
