--- a/build.gradle
+++ b/build.gradle
@@ -1,57 +1,41 @@
-apply plugin: 'java'
-apply plugin: 'idea'
-apply plugin: 'kotlin'
-
-version = 0.1
-group = 'com.prestongarno.ktq'
-
 buildscript {
   ext.sourceCompatibility = 1.8
-  ext.kotlin_version = '1.1.4-3'
   ext.clientId = 'ktq-gradle'
   ext.projectDescription = 'compiles graphql schemas to kotlin type hierarchies'
   ext.gitBaseUrl = GIT_BASE_URL + '/ktq-gradle'
   ext.projLicenseUrl = "$gitBaseUrl/LICENSE.txt"
   ext.localStaging = "$buildDir/staging/"
   ext.localBintrayStaging = "$buildDir/bintray/"
-
-  repositories {
-      mavenCentral()
-  }
-  dependencies {
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-  }
 }
+
+plugins {
+  id 'nebula.kotlin' version '1.1.4'
+  id 'java'
+  id 'idea'
+}
+
+version = 0.1
+group = 'com.prestongarno.ktq'
+
 
 repositories {
-    mavenCentral()
-}
-compileKotlin {
-  kotlinOptions {
-    jvmTarget = "1.8"
-  }
-}
-compileTestKotlin {
-  kotlinOptions {
-    jvmTarget = "1.8"
-  }
+  mavenCentral()
 }
 dependencies {
   compile gradleApi()
-  compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
   compile "org.jetbrains.kotlin:kotlin-reflect"
   compile 'com.squareup:kotlinpoet:0.4.0'
   compile 'com.prestongarno.ktq:ktq-client:0.1'
   testCompile group: 'junit', name: 'junit', version: '4.12'
   testCompile 'junit:junit:4.12'
-  testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
+  testCompile "org.jetbrains.kotlin:kotlin-test"
 }
 
 jar {
   manifest {
     attributes(
-      'Manifest-Version': '1.0',
-      "implementation-class": "${group}.compiler.CompilerPlugin"
+            'Manifest-Version': '1.0',
+            "implementation-class": "${group}.compiler.CompilerPlugin"
     )
   }
 }
