--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ plugins {
   id 'idea'
 }
 
+clean { doFirst { delete "src/test/resources"} }
+
 version = 0.1
 group = 'com.prestongarno.ktq'
 
@@ -42,14 +44,18 @@ jar {
 }
 
 test {
-  systemProperty "-D${rootProject.group}.compiler.GradleTests",
-          (sourceSets.test.resources.asPath + "MockProjects").toString()
+  //noinspection GroovyAssignabilityCheck
+  systemProperties.put('-Dcom.prestongarno.ktq.compiler.testOutput',
+          '' + sourceSets.test.resources.srcDirs.first() + "/MockProjects")
+  //noinspection GroovyAssignabilityCheck
+  systemProperties.put('-Dcom.prestongarno.ktq.compiler.writeFiles', "false")
+
 }
 
 task integrationTest(type: Test) {
   options {
     //noinspection GroovyAssignabilityCheck
-    systemProperties.put("-D" + group + ".compiler.writeTestFiles", "true")
+    systemProperties.put('-Dcom.prestongarno.ktq.compiler.testOutput', "MockProjects")
   }
 }
 
@@ -59,7 +65,7 @@ sourceSets {
       srcDirs = ['src/main/java']
     }
     resources {
-      srcDirs = ['src/main/res']
+      srcDirs = ['src/main/resources']
     }
   }
   test {
@@ -67,13 +73,13 @@ sourceSets {
       srcDirs = ['src/test/java']
     }
     resources {
-      srcDirs = ['src/test/res']
+      srcDirs = ['src/test/resources']
     }
   }
 }
+
 idea {
   module {
     downloadJavadoc = true
-    //downloadSources = true
   }
 }
