--- a/build.gradle
+++ b/build.gradle
@@ -45,8 +45,7 @@ jar {
 
 test {
   //noinspection GroovyAssignabilityCheck
-  systemProperties.put('-Dcom.prestongarno.ktq.compiler.testOutput',
-          '' + sourceSets.test.resources.srcDirs.first() + "/MockProjects")
+  systemProperties.put('-Dcom.prestongarno.ktq.compiler.testOutput', "src/test/resources/MockProjects")
   //noinspection GroovyAssignabilityCheck
   systemProperties.put('-Dcom.prestongarno.ktq.compiler.writeFiles', "false")
 
