--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ plugins {
   id 'idea'
 }
 
-clean { doFirst { delete "src/test/resources"} }
+clean { doFirst { delete "src/test/resources/MockProjects"} }
 
 version = 0.1
 group = 'com.prestongarno.ktq'
