--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import kotlin.reflect.jvm.internal.impl.builtins.KotlinBuiltIns
+
 buildscript {
   ext.sourceCompatibility = 1.8
   ext.clientId = 'ktq-gradle'
@@ -17,9 +19,9 @@ buildscript {
 }
 
 plugins {
-  id 'nebula.kotlin' version '1.1.4'
+  id 'nebula.kotlin' version '1.1.4-3'
   id 'java'
-  id 'idea'
+  id 'java-library'
 }
 
 version = 0.1
@@ -31,13 +33,17 @@ repositories {
 }
 dependencies {
   compile gradleApi()
-  compile "org.jetbrains.kotlin:kotlin-reflect"
-  compile 'com.squareup:kotlinpoet:0.4.0'
   compile 'com.prestongarno.ktq:ktq-client:0.1'
+  compile 'com.squareup:kotlinpoet:0.4.0'
+  compile "org.jetbrains.kotlin:kotlin-reflect"
   testCompile gradleTestKit()
   testCompile group: 'junit', name: 'junit', version: '4.12'
   testCompile 'junit:junit:4.12'
   testCompile "org.jetbrains.kotlin:kotlin-test"
+}
+
+compileKotlin {
+  includeRuntime false
 }
 
 jar {
@@ -53,6 +59,30 @@ task integrationTest(type: Test) {
     systemProperties 'com.prestongarno.ktq.compiler.writeFiles': 'true'
   }
 }
+
+configurations {
+  pub {
+    transitive = true
+  }
+}
+task exportApi(type: Copy) {
+  from configurations.runtime
+  into "$buildDir/exported"
+}
+
+task bundle(type: Jar) {
+  dependsOn(exportApi)
+  from exportApi.destinationDir
+  println(exportApi.destinationDir)
+  description 'create the distributable plugin'
+  destinationDir file('build/pub-build/')
+}
+
+
+artifacts {
+  archives bundle
+}
+
 
 sourceSets {
   main {
@@ -72,9 +102,9 @@ sourceSets {
     }
   }
 }
-
-idea {
-  module {
-    downloadJavadoc = true
+task configs {
+  doLast {
+    configurations.all { println(it.name + " resolvable? :$it.canBeResolved") }
   }
 }
+
