--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
-import kotlin.reflect.jvm.internal.impl.builtins.KotlinBuiltIns
+import java.util.function.Function
 
 buildscript {
+  ext.kotlin_version = '1.1.4-3'
   ext.sourceCompatibility = 1.8
   ext.clientId = 'ktq-gradle'
   ext.projectDescription = 'compiles graphql schemas to kotlin type hierarchies'
@@ -11,39 +12,61 @@ buildscript {
   repositories {
     maven {
       url "https://plugins.gradle.org/m2/"
+      mavenCentral()
     }
   }
   dependencies {
+    classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     classpath "com.gradle.publish:plugin-publish-plugin:0.9.7"
   }
 }
 
 plugins {
-  id 'nebula.kotlin' version '1.1.4-3'
   id 'java'
   id 'java-library'
+  id "com.jfrog.bintray" version "1.7.3"
+}
+apply plugin: "com.gradle.plugin-publish"
+apply plugin: 'kotlin'
+apply plugin: 'maven-publish'
+
+def getVersion = { Project project ->
+  if (project.hasProperty("release") &&
+          project.property("release") == "true")
+    return "0.2"
+  else return "0.2-SNAPSHOT"
 }
 
-version = 0.1
+version = getVersion(rootProject)
 group = 'com.prestongarno.ktq'
 
 
 repositories {
+  mavenCentral()
   jcenter()
 }
+
+def nonExported = ["org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version",
+                   "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"]
+
 dependencies {
-  compile gradleApi()
-  compile 'com.prestongarno.ktq:ktq-client:0.1'
-  compile 'com.squareup:kotlinpoet:0.4.0'
-  compile "org.jetbrains.kotlin:kotlin-reflect"
+  api gradleApi()
+  implementation 'com.prestongarno.ktq:ktq-client:0.1'
+  implementation "com.squareup:kotlinpoet:0.4.0"
+  compileClasspath nonExported
   testCompile gradleTestKit()
   testCompile group: 'junit', name: 'junit', version: '4.12'
   testCompile 'junit:junit:4.12'
   testCompile "org.jetbrains.kotlin:kotlin-test"
+  testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
+  testRuntimeClasspath nonExported
 }
 
 compileKotlin {
-  includeRuntime false
+  kotlinOptions {
+    includeRuntime = false
+  }
 }
 
 jar {
@@ -60,35 +83,29 @@ task integrationTest(type: Test) {
   }
 }
 
-configurations {
-  pub {
-    transitive = true
-  }
-}
-task exportApi(type: Copy) {
-  from configurations.runtime
-  into "$buildDir/exported"
+task jarDoc(type: Jar) {
+  doFirst { javadoc }
+  from javadoc.outputs.files
+  classifier 'javadoc'
+  archiveName "$clientId-$version-${classifier}.jar"
 }
 
-task bundle(type: Jar) {
-  dependsOn(exportApi)
-  from exportApi.destinationDir
-  println(exportApi.destinationDir)
-  description 'create the distributable plugin'
-  destinationDir file('build/pub-build/')
+task jarSource(type: Jar) {
+  from(sourceSets.main.allSource)
+  from(sourceSets.test.allSource)
+  classifier 'sources'
+  archiveName = "$clientId-$version-sources.jar"
 }
-
 
 artifacts {
-  archives bundle
+  archives jar
+  archives jarDoc
+  archives jarSource
 }
-
 
 sourceSets {
   main {
-    java {
-      srcDirs = ['src/main/kotlin']
-    }
+    java { srcDirs = ['src/main/kotlin'] }
     resources {
       srcDirs = ['src/main/resources']
     }
@@ -102,9 +119,118 @@ sourceSets {
     }
   }
 }
-task configs {
-  doLast {
-    configurations.all { println(it.name + " resolvable? :$it.canBeResolved") }
+
+def checkIsRelease = {
+  if (rootProject.version.endsWith("SNAPSHOT"))
+    throw new StopActionException("Specify '-Prelease=true to run this task") }
+
+publish.dependsOn(tasks.clean)
+bintrayUpload.dependsOn(checkIsRelease, tasks.publish)
+
+publishing {
+  publications {
+    mavenJava(MavenPublication) {
+      groupId rootProject.group
+      artifactId clientId
+      from components.java
+      artifact jarDoc
+      artifact jarSource
+
+      pom.withXml {
+        asNode().children().last() + {
+          resolveStrategy = Closure.DELEGATE_FIRST
+          name clientId
+          description projectDescription
+          url gitBaseUrl
+          organization {
+            name DEV_COMPANY
+            url DEV_COMPANY_URL
+          }
+          issueManagement {
+            system 'git'
+            url "$gitBaseUrl/issues"
+          }
+          scm {
+            url "${gitBaseUrl}.git"
+          }
+          licenses {
+            license {
+              name "MIT"
+              url "$projLicenseUrl"
+              comments "See $projLicenseUrl for more details."
+              distribution "$projLicenseUrl"
+            }
+          }
+          developers {
+            developer {
+              id DEV_URL
+              name DEV_NAME
+              organization DEV_COMPANY
+              organizationUrl DEV_COMPANY_URL
+            }
+          }
+        }
+      }
+    }
+  }
+  repositories {
+    maven {
+      url localStaging
+    }
   }
 }
 
+bintray {
+  user BINTRAY_USER
+  key BINTRAY_KEY
+  publish = false
+  override = true
+
+  pkg {
+    repo = 'ktq'
+    name = clientId
+    desc = projectDescription
+    licenses = ['Apache 2.0']
+    vcsUrl = "${gitBaseUrl}.git"
+    publications = ['mavenJava']
+    filesSpec {
+      from(localStaging) {
+        include "**/*.md5"
+      }
+      into "/"
+      includeEmptyDirs = false
+    }
+    githubRepo = ''
+    githubReleaseNotesFile = 'README.md'
+
+    version {
+      name = rootProject.version
+
+      gpg {
+        sign = true
+        passphrase = GMAIL_GPG
+      }
+      mavenCentralSync {
+        sync = false
+        user = MAVEN2_USERNAME
+        password = MAVEN2_PASSWORD
+        close = '0'
+      }
+    }
+  }
+}
+
+compileKotlin {
+  kotlinOptions {
+    jvmTarget = "1.8"
+  }
+}
+compileTestKotlin {
+  kotlinOptions {
+    jvmTarget = "1.8"
+  }
+}
+
+task checkVersion {
+  println("Version is $version")
+}
