--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,9 @@ notifications:
 sudo: false
 before_install:
 - openssl aes-256-cbc -K $encrypted_d8db5bc5ce8b_key -iv $encrypted_d8db5bc5ce8b_iv
-  -in gradle.properties.enc -out ~/.gradle/gradle.properties -d
+  -in ./.buildscript/gradle.properties.enc -out ~/.gradle/gradle.properties -d
 - openssl aes-256-cbc -K $encrypted_d8db5bc5ce8b_key -iv $encrypted_d8db5bc5ce8b_iv
-  -in ./buildscript/keys.gpg.enc -out .buildscript/ -d
+  -in ./.buildscript/keys.gpg.enc -out .buildscript/ -d
 before_cache:
 - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
 - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
