--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
   dependencies {
     classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    classpath "org.jfrog.buildinfo:build-info-extractor-gradle:latest.release"
     classpath "com.gradle.publish:plugin-publish-plugin:0.9.7"
   }
 }
@@ -25,9 +26,10 @@ plugins {
   id 'java-library'
   id "com.jfrog.bintray" version "1.7.3"
 }
-apply plugin: "com.gradle.plugin-publish"
 apply plugin: 'kotlin'
 apply plugin: 'maven-publish'
+apply plugin: "com.gradle.plugin-publish"
+apply plugin: "com.jfrog.artifactory"
 
 def getVersion = { Project project ->
   if (project.hasProperty("release") &&
@@ -124,7 +126,7 @@ bintrayUpload.dependsOn(tasks.publish)
 publishing {
   publications {
     mavenJava(MavenPublication) {
-      groupId rootProject.group
+      groupId "$rootProject.group"
       artifactId clientId
       from components.java
       artifact jarDoc
@@ -192,20 +194,11 @@ bintray {
     licenses = ['Apache 2.0']
     vcsUrl = "${gitBaseUrl}.git"
     publications = ['mavenJava']
-    filesSpec {
-      from(localStaging) {
-        include "**/*.md5"
-        exclude "**/*.md5*"
-      }
-      into "/"
-      includeEmptyDirs = false
-    }
-    githubRepo = 'https://github.com/prestongarno/ktq-gradle'
+    githubRepo = "$gitBaseUrl"
     githubReleaseNotesFile = 'README.md'
 
     version {
-      name = rootProject.version
-
+      name = "$rootProject.version"
       gpg {
         sign = true
         passphrase = GMAIL_GPG
@@ -229,4 +222,22 @@ compileTestKotlin {
   kotlinOptions {
     jvmTarget = "1.8"
   }
+}
+
+artifactory {
+  contextUrl = 'http://oss.jfrog.org/artifactory'
+  publish {
+    repository {
+      repoKey = 'oss-snapshot-local'   
+      username = BINTRAY_USER          
+      password = JFROG_KEY
+    }
+    defaults {
+        publications ('mavenJava')
+        publishPom = true   
+    }
+  }
+  clientConfig.setIncludeEnvVars(false)
+  clientConfig.info.setBuildNumber('' + new java.util.Random(System.currentTimeMillis()).nextInt(20000))
+  clientConfig.timeout = 600 
 }
