--- a/build.gradle
+++ b/build.gradle
@@ -50,9 +50,9 @@ def nonExported = ["org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version",
                    "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"]
 
 dependencies {
-  api gradleApi()
-  implementation 'com.prestongarno.ktq:ktq-client:0.1'
-  implementation "com.squareup:kotlinpoet:0.4.0"
+  compile gradleApi()
+  compile 'com.prestongarno.ktq:ktq-client:0.1'
+  compile "com.squareup:kotlinpoet:0.4.0"
   compileClasspath nonExported
   testCompile gradleTestKit()
   testCompile group: 'junit', name: 'junit', version: '4.12'
