--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,7 @@ def nonExported = ["org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version",
                    "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"]
 
 dependencies {
-  api gradleApi()
+  compile gradleApi()
   implementation "com.prestongarno.ktq:ktq-client:0.2${evalIsRelease(rootProject)}"
   implementation "com.squareup:kotlinpoet:0.4.0"
   compileClasspath nonExported
