--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,10 @@ language: java
 jdk:
   - oraclejdk8
 
-script: ./gradlew clean test build
+script: 
+  - export BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH; else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
+  - echo "TRAVIS_BRANCH=$TRAVIS_BRANCH, PR=$PR, BRANCH=$BRANCH"
+  - ./gradlew clean test build
 
 branches:
   only:
