--- a/build.gradle
+++ b/build.gradle
@@ -57,9 +57,9 @@ dependencies {
   testCompile gradleTestKit()
   testCompile group: 'junit', name: 'junit', version: '4.12'
   testCompile 'junit:junit:4.12'
-  testCompile "org.jetbrains.kotlin:kotlin-test"
   testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
-  testCompile "com.google.truth:truth:0.35"
+  testCompile "com.google.truth:truth:0.28"
+  testCompile group: 'org.jetbrains.kotlin', name: 'kotlin-compiler', version: "$kotlin_version"
   testRuntimeClasspath nonExported
 }
 
