--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-  ext.kotlin_version = '1.1.4-3'
+  ext.kotlin_version = '1.1.50'
   ext.sourceCompatibility = 1.8
   ext.clientId = 'ktq-gradle'
   ext.projectDescription = 'compiles graphql schemas to kotlin type hierarchies'
@@ -51,16 +51,16 @@ def nonExported = ["org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version",
 
 dependencies {
   compile gradleApi()
-  implementation "com.prestongarno.ktq:ktq-client:0.2${evalIsRelease(rootProject)}"
   implementation "com.squareup:kotlinpoet:0.4.0"
+  implementation "com.prestongarno.ktq:ktq-client:0.2-SNAPSHOT"
   compileClasspath nonExported
+  testRuntimeClasspath nonExported
   testCompile gradleTestKit()
   testCompile group: 'junit', name: 'junit', version: '4.12'
   testCompile 'junit:junit:4.12'
   testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
   testCompile "com.google.truth:truth:0.28"
   testCompile group: 'org.jetbrains.kotlin', name: 'kotlin-compiler', version: "$kotlin_version"
-  testRuntimeClasspath nonExported
 }
 
 compileKotlin {
@@ -236,7 +236,5 @@ artifactory {
         publishPom = true   
     }
   }
-  clientConfig.setIncludeEnvVars(false)
-  clientConfig.info.setBuildNumber('' + new java.util.Random(System.currentTimeMillis()).nextInt(20000))
-  clientConfig.timeout = 600 
+  //clientConfig.info.setBuildNumber('' + new java.util.Random(System.currentTimeMillis()).nextInt(20000))
 }
